k8s/development.yml
apiVersion: v1
kind: Service
metadata:
  name: game-kalambury-backend-dev
spec:
  ports:
  - port: 80
    targetPort: 80

  selector:
    app: game-kalambury-backend-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-kalambury-backend-dev
spec:
  selector:
    matchLabels:
      app: game-kalambury-backend-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: game-kalambury-backend-dev
    spec:
      containers:
      - name: game-kalambury-backend-dev
        image: registry.gitlab.com/enlighten1/capgemini-capmania/kalambury-backend:latest-development
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "40Mi"
            cpu: "20m"
          limits:
            memory: "100Mi"
            cpu: "100m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: game-kalambury-backend-dev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: 
    - game-kalambury-backend-dev.capgemini.enl-projects.com
    secretName: game-kalambury-backend-dev-tls
  rules:
  - host: game-kalambury-backend-dev.capgemini.enl-projects.com
    http:
      paths:
      - backend:
          serviceName: game-kalambury-backend-dev
          servicePort: 80
